# vdm

./: Cargo.toml  README.md  example.vdm
examples/: basic_vdm.rs  get_vdm_name.rs
src/: action.rs  lib.rs  main.rs
src/tests/: generate.rs  mod.rs  test.vdm
